--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"typescript-plugin-toml": "^0.3.1",
 		"vite": "^4.4.2",
 		"vite-plugin-toml": "^0.6.0"
 	},
