--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
+		"@zerodevx/svelte-img": "^2.1.0",
 		"lorem-ipsum": "^2.0.8",
 		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
