--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 	"type": "module",
 	"dependencies": {
 		"fp-ts": "^2.16.1",
-		"io-ts": "^2.2.20"
+		"io-ts": "^2.2.20",
+		"slugify": "^1.6.6",
+		"svelte-markdown": "^0.4.0"
 	}
 }
