--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.27.4",
 		"@zerodevx/svelte-img": "^2.1.0",
+		"drab": "^4.1.4",
 		"lorem-ipsum": "^2.0.8",
 		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.6.0",
+		"svelte-share-buttons-component": "^2.0.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2",
