--- a/.woodpecker/container.yml
+++ b/.woodpecker/container.yml
@@ -6,13 +6,14 @@ when:
 steps:
   build:
     image: plugins/docker-buildx
-  settings:
-    dockerfile: Containerfile
-    tag: ${CI_COMMIT_TAG##v}
-    repo: git.trivernis.net/trivernis/plantwiki
-    registry: git.trivernis.net
-    platforms: linux/amd64,linux/arm64/v8
-    username: woodpeckerbot
-    password:
-      from_secret: fogejo_token
+    secrets: [forgejo_token]
+    settings:
+      dockerfile: Containerfile
+      tag: ${CI_COMMIT_TAG##v}
+      repo: git.trivernis.net/trivernis/plantwiki
+      registry: git.trivernis.net
+      platforms: linux/amd64,linux/arm64/v8
+      username: woodpeckerbot
+      password:
+        from_secret: fogejo_token
     
