Fix typo in container build secret

--- a/.woodpecker/container.yml
+++ b/.woodpecker/container.yml
@@ -15,5 +15,5 @@ steps:
       platforms: linux/amd64,linux/arm64/v8
       username: woodpeckerbot
       password:
-        from_secret: fogejo_token
+        from_secret: forgejo_token
     
