--- a/.woodpecker/container.yml
+++ b/.woodpecker/container.yml
@@ -5,7 +5,7 @@ when:
       - ${CI_REPO_DEFAULT_BRANCH}
 steps:
   build:
-    image: plugins/docker-buildx
+    image: woodpeckerci/plugin-docker-buildx
     secrets: [forgejo_token]
     settings:
       dockerfile: Containerfile
