--- a/.woodpecker/container.yml
+++ b/.woodpecker/container.yml
@@ -12,7 +12,7 @@ steps:
       tag: ${CI_COMMIT_TAG##v}
       repo: git.trivernis.net/trivernis/plantwiki
       registry: git.trivernis.net
-      platforms: linux/amd64,linux/arm64/v8
+      platforms: linux/amd64
       username: woodpeckerbot
       password:
         from_secret: forgejo_token
